--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -23,6 +23,56 @@
       </fieldset>
     <% end %>
 
+    <fieldset class="meeting-lobby-activity">
+      <div class="small-12 columns">
+        <legend><%= t('backend.meeting_lobby_activity') %></legend>
+        <% if current_user.lobby? %>
+          <%= f.radio_button :lobby_activity, true, checked: true %>
+        <% else %>
+          <%= f.radio_button :lobby_activity, true %>
+        <% end %>
+        <%= f.label :lobby_activity, t('backend.meeting_lobby_activity_yes'), value: true %>
+        <%= f.radio_button :lobby_activity, false, disabled: current_user.lobby? %>
+        <%= f.label :lobby_activity, t('backend.meeting_lobby_activity_no'), value: false %>
+        <div class="small-12 error-radio-buttons"></div>
+        <div id="lobby-activity-event">
+        <div class="lobby-organization-autocomplete">
+          <%= t('backend.meeting_lobby_activity_organization') %>
+          <% if current_user.lobby? %>
+            <%= f.hidden_field :organization_id, :value => current_user.organization_id %>
+            <%= f.autocomplete_field :organization_name, autocomplete_organization_name_organizations_path, :update_elements => {}, placeholder: t('backend.meeting_lobby_activity_input'), value: current_user.organization.name, readonly: true %>
+          <% else %>
+            <%= f.hidden_field :organization_id %>
+            <%= f.autocomplete_field :organization_name, autocomplete_organization_name_organizations_path, :update_elements => {}, placeholder: t('backend.meeting_lobby_activity_input') %>
+          <% end %>
+        </div>
+
+        <% if current_user.lobby? %>
+          <div id="category-block">
+            <div class="row">
+              <div class="small-10 columns"><%= t('backend.meeting_lobby_category') %> <i id="event-category"><%= current_user.organization.category.name %> </i></div>
+              <div class="small-2 columns"></div>
+            </div>
+            <hr />
+          </div>
+        <% else %>
+          <div id="category-block" style="display: none" data-new-url="<%= organization_category_url_pattern %>">
+            <div class="row">
+              <div class="small-10 columns"><%= t('backend.meeting_lobby_category') %> <i id="event-category"></i></div>
+              <div class="small-2 columns"></div>
+            </div>
+            <hr />
+          </div>
+        <% end %>
+
+        <%= render 'event_represented_entities', f:f %>
+        <hr />
+        <%= render 'event_agents', f:f %>
+
+      </div>
+      </div>
+    </fieldset>
+
     <fieldset>
       <legend><%= t('backend.basic_data') %></legend>
       <div class="small-12 columns">
@@ -34,9 +84,11 @@
         <%= f.text_area :description, class: 'tinymce' %>
         <br />
         <% if current_user.lobby? || admin_or_mananger_edit? %>
-          <%= f.label :lobby_scheduled, t('backend.lobby_date') %>
-          <%= f.text_area :lobby_scheduled, class: 'tinymce' %>
-          <br />
+          <div class="lobby-scheduled">
+            <%= f.label :lobby_scheduled, t('backend.lobby_date') %>
+            <%= f.text_area :lobby_scheduled, class: 'tinymce' %>
+            <br />
+          </div>
         <% end %>
         <% unless current_user.lobby? %>
           <%= f.label :scheduled, t('backend.date') %>
@@ -72,55 +124,6 @@
         </div>
       </fieldset>
     <% end %>
-
-    <fieldset class="meeting-lobby-activity">
-      <legend><%= t('backend.meeting_lobby_activity') %></legend>
-      <% if current_user.lobby? %>
-        <%= f.radio_button :lobby_activity, true, checked: true %>
-      <% else %>
-        <%= f.radio_button :lobby_activity, true %>
-      <% end %>
-      <%= f.label :lobby_activity, t('backend.meeting_lobby_activity_yes'), value: true %>
-      <%= f.radio_button :lobby_activity, false, disabled: current_user.lobby? %>
-      <%= f.label :lobby_activity, t('backend.meeting_lobby_activity_no'), value: false %>
-      <div class="small-12 error-radio-buttons"></div>
-
-      <div id="lobby-activity-event">
-        <div class="lobby-organization-autocomplete">
-          <%= t('backend.meeting_lobby_activity_organization') %>
-          <% if current_user.lobby? %>
-            <%= f.hidden_field :organization_id, :value => current_user.organization_id %>
-            <%= f.autocomplete_field :organization_name, autocomplete_organization_name_organizations_path, :update_elements => {}, placeholder: t('backend.meeting_lobby_activity_input'), value: current_user.organization.name, readonly: true %>
-          <% else %>
-            <%= f.hidden_field :organization_id %>
-            <%= f.autocomplete_field :organization_name, autocomplete_organization_name_organizations_path, :update_elements => {}, placeholder: t('backend.meeting_lobby_activity_input') %>
-          <% end %>
-        </div>
-
-        <% if current_user.lobby? %>
-          <div id="category-block">
-            <div class="row">
-              <div class="small-10 columns"><%= t('backend.meeting_lobby_category') %> <i id="event-category"><%= current_user.organization.category.name %> </i></div>
-              <div class="small-2 columns"></div>
-            </div>
-            <hr />
-          </div>
-        <% else %>
-          <div id="category-block" style="display: none" data-new-url="<%= organization_category_url_pattern %>">
-            <div class="row">
-              <div class="small-10 columns"><%= t('backend.meeting_lobby_category') %> <i id="event-category"></i></div>
-              <div class="small-2 columns"></div>
-            </div>
-            <hr />
-          </div>
-        <% end %>
-
-        <%= render 'event_represented_entities', f:f %>
-        <hr />
-        <%= render 'event_agents', f:f %>
-
-      </div>
-    </fieldset>
 
     <fieldset><!-- Attendees -->
       <legend><%= t('backend.attendees') %></legend>
