Fix spec. Added text - Si deja este campo en blanco, cuando pulse Aceptar este evento se verá en la zona pública. -

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -154,6 +154,7 @@
       <fieldset>
         <legend><%= t('backend.meeting_lobby_activity_public_website') %></legend>
         <%= f.text_field :published_at, class: 'fdatepicker' %>
+        <p class="help-text">Si deja este campo en blanco, cuando pulse Aceptar este evento se verá en la zona pública.</p>
       </fieldset>
     <% end %>
 
