--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -28,7 +28,7 @@
     </tfoot>
     <tbody>
       <% @events.each do |event| %>
-      <tr>
+      <tr id="<%= dom_id(event) %>">
         <td class="event_date">
           <% if event.scheduled.present? %>
             <%= event.scheduled.to_time.strftime(t('time.formats.short')) %>
@@ -53,15 +53,32 @@
           <% end %>
 
           <%= link_to edit_event_path(event), title: t('backend.edit') do %>
-              <i class="step fi-page-edit size-24"></i>
-            <% end if can? :edit, event %>
+            <i class="step fi-page-edit size-24"></i>
+          <% end if can? :edit, event %>
 
-            <%= link_to event_path(event), method: :delete, data: { confirm: t("backend.delete_confirm") }, title: t('backend.delete') do%>
-              <i class="step fi-page-delete size-24"></i>
-            <% end if can? :destroy, event %>
-          <%= link_to event.attachments.first.file.url, target: :_blank do %>
-            <i class="step fi-archive size-24"></i>
-          <% end if event.attachments.size > 0 %>
+          <%= link_to event_path(event), method: :delete, data: { confirm: t("backend.delete_confirm") }, title: t('backend.delete') do %>
+            <i class="step fi-page-delete size-24"></i>
+          <% end if can? :destroy, event %>
+
+          <% if event.attachments.any? %>
+            <%= link_to "#", title: t('backend.attachments_downloads'),
+                        class: "attachments-dropdown",
+                        data: { dropdown: "#{event_attachments_download_dropdown_id(event)}" },
+                        aria: { controls: "#{event_attachments_download_dropdown_id(event)}" } do %>
+              <i class="step fi-archive size-24"></i>
+            <% end %>
+
+            <ul id="<%= event_attachments_download_dropdown_id(event) %>" class="event-attachments-dropdown f-dropdown" data-dropdown-content aria-hidden="true" tabindex="-1">
+              <% event.attachments.each do |attachment| %>
+                <li>
+                  <%= link_to attachment.file.url, target: :_blank do %>
+                    <i class="step fi-archive size-24"></i>
+                    <%= attachment.title %>
+                  <% end %>
+                </li>
+              <% end %>
+            </ul>
+          <% end %>
         </td>
         <td class="event_actions">
           <%= t("status.#{event.status}") %>
