--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,6 @@
 <div class="small-12 mt5">
   <h1><%= t('backend.new_event')%></h1>
-  <%= link_to t('backend.back'), events_path , :class=> "button tiny radius" %>
+  <%= link_to t('backend.back'), :back , :class=> "button tiny radius" %>
 </div>
 
 <%= render :partial => 'form' %>
