--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="small-12 columns">
     <%= link_to t('backend.faq.questions'), faq_path, class: 'right' %>
-    <h2 class="title-l">
+    <h2 class="title-l mb40">
       <%= t('main.title_agents')%>
     </h2>
   </div>
