Added some style.

--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -7640,6 +7640,15 @@ fieldset.attachments{
 }
 
 .visit-organizations-list{
+  .results-block{
+    padding: 1rem;
+    background: #ececec;
+    margin-bottom: 1rem;
+    p{
+      margin-bottom:0;
+    }
+  }
+
   select {
     height: 2.8rem;
   }
