--- a/app/views/shared/_search_keywords.html.erb
+++ b/app/views/shared/_search_keywords.html.erb
@@ -1,9 +1,9 @@
-<div class="small-12 columns mb10">
+<div class="small-12 columns mb10 results-block">
   <p>
     <strong><%= collection.total%> <%= t('main.results')%></strong>
     <span class="keywords"><%= t('main.with_keyword')%>
       <strong><%= keyword %></strong>
-      <a id="delete-keywords" href="#">
+      <a id="delete-keywords" href="#" class="right">
         <span class="icon icon__delete"><%= t('main.delete')%>
         </span>
       </a>
