--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -7027,8 +7027,8 @@ header{
 
 .title-l {
   color: black;
-  font-size: 44px;
-  font-weight: 700;
+  font-size: 30px;
+  //font-weight: 700;
   line-height: 48px;
   font-family: 'Open Sans';
   display: block;
@@ -7288,7 +7288,6 @@ button, a {
 }
 .title-l {
   font-weight: 700;
-  // margin-bottom: 70px;
 }
 select {
   height: 3.1125rem;
@@ -7642,15 +7641,20 @@ fieldset.attachments{
 .visit-organizations-list{
   select {
     height: 2.8rem;
+    font-size: 11px;
+    padding-left: 10px;
   }
 
   .button.small{
     padding-left: 1rem;
     padding-right: 1rem;
   }
+
   .result-l{
     font-weight: normal;
+    font-size: 24px;
   }
+
   .result-l,
   .export {
     margin-top: 1.3rem;
@@ -7658,7 +7662,6 @@ fieldset.attachments{
 
   .export{
     a{
-      margin-top:0.6rem;
       span{
         display: inline-block;
         font-size: 13px;
@@ -7673,10 +7676,19 @@ fieldset.attachments{
   .box .post{
     border-bottom: 0;
     margin-bottom:0;
-    padding: 1.6rem 1rem;
+    padding: 1rem;
+    .post__title{
+      font-weight: normal;
+    }
+    p{
+      font-size: 13px;
+    }
   }
 
   article{
+    h1{
+      font-size: 15px;
+    }
     &:nth-child(odd){
       background: #f8f8f8;
     }
@@ -7760,7 +7772,7 @@ fieldset.attachments{
 @media screen and (min-width: 40em) and (max-width: 63.9375em) {
   .visit-organizations-list{
     .title-s{
-      font-size: 12px;
+      font-size: 11px;
     }
     .buttons-action{
       text-align: right;
