--- a/app/views/admin/organizations/_lobby_data.html.erb
+++ b/app/views/admin/organizations/_lobby_data.html.erb
@@ -8,7 +8,9 @@
     </div>
     <div class="small-12 medium-6 columns">
       <%= f.label :range_fund, t('backend.lobbies_data.range_fund_title') %>
-      <%= f.select :range_fund, Organization.range_funds.keys.map {|key| [t("backend.lobbies_data.range_fund.#{key}"), key]} %>
+      <%= f.select :range_fund, Organization.range_funds.keys.map {
+        |key| [t("backend.lobbies_data.range_fund.#{key}"), key]},
+        {:include_blank => t("backend.lobbies_data.range_fund.select")} %>
 
       <%= form_field_errors(f, :range_fund) %>
     </div>
