--- a/app/views/visitors/show.html.erb
+++ b/app/views/visitors/show.html.erb
@@ -83,7 +83,7 @@
             <% @event.attachments.each do |attachment| %>
               <% unless attachment.public == false %>
                 <p><%= link_to attachment.title, attachment.file.url,target: :blank %></p>
-                <%= attachment.description.html_safe %>
+                <%= attachment.description.html_safe if attachment.description.present? %>
               <% end %>
             <% end %>
           </div>
