--- a/app/views/admin/organizations/_represented_entities_fields.html.erb
+++ b/app/views/admin/organizations/_represented_entities_fields.html.erb
@@ -34,7 +34,7 @@
 
     <div class="small-12 medium-6 columns">
       <%= f.label :fiscal_year, t('backend.represented_entities.fiscal_year') %>
-      <%= f.number_field :fiscal_year %>
+      <%= f.number_field :fiscal_year, min: 0 %>
       <%= form_field_errors(f, :fiscal_year) %>
     </div>
 
