--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -102,10 +102,14 @@
     <% @event.attachments.each do |attachment| %>
     <div class="row">
       <div class="small-12 columns">
-        <%= link_to attachment.title, attachment.file.url, target: :blank %>
+        <p>
+          <strong><%= t('backend.attachments') %></strong>
+          <%= link_to attachment.title, attachment.file.url, target: :blank %>
+        </p>
       </div>
       <div class="small-12 columns">
         <p>
+          <strong><%= t('backend.attachments_description') %></strong>
           <%= attachment.description.html_safe %>
         </p>
       </div>
