--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -21,7 +21,7 @@
     <tbody>
     <% @activities.each do |activity| %>
         <tr>
-          <td class="event_date"><%= activity.created_at.to_time.strftime(t('time.formats.short')) %></td>
+          <td class="event_date"><%= I18n.l activity.created_at, format: :short %></td>
           <td class="event_holder"><%= link_to activity.owner.full_name, user_path(activity.owner) if activity.owner.present? %></td>
           <td class="event_txt">
             <% if activity.trackable.present? %>
