--- a/app/views/holders/_position_fields.html.erb
+++ b/app/views/holders/_position_fields.html.erb
@@ -2,7 +2,9 @@
   <div class="row">
     <%= f.hidden_field :holder_id, :value => @holder.id %>
     <div class="small-2 columns">
-      <%= f.text_field :to, value: (f.object.to.strftime(t('date.formats.short')) if f.object.to.present?), class: 'fdatepicker'%>
+      <%= f.text_field :to,
+                       value: f.object.to.present? ? I18n.l(f.object.to) : "",
+                       class: 'fdatepicker'%>
     </div>
     <div class="small-3 columns">
       <%= f.text_field :title%>
