Fix syntax error

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -175,7 +175,7 @@
                 <% if represented_entity.to.present? %>
                   <p>
                     <strong><%= t('organizations.show.represented_entity_to') %>  </strong>
-                    <%= I18nn.l represented_entity.to %>
+                    <%= I18n.l represented_entity.to %>
                   </p>
                 <% end %>
 
