Fix text order suggested by client.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
         <div class="header__base medium-6 columns">
           <%= link_to root_path do %>
             <%= image_tag 'header_logo_madrid.png', class: 'header__imago', alt:'¡Madrid'%>
-            <h1 class="header__title"><strong><%= t('header.open_goverment') %></strong><%= t('header.transparency') %></h1>
+            <h1 class="header__title"><strong><%= t('header.transparency') %></strong><%= t('header.open_goverment') %></h1>
           <% end %>
         </div>
         <section class="top-bar-section">
