--- a/app/views/admin/organizations/_form.html.erb
+++ b/app/views/admin/organizations/_form.html.erb
@@ -1,7 +1,6 @@
 <%= form_for [:admin, @organization], html: {class: 'organization-form'} do |f| %>
 
   <%= hidden_field_tag 'show', params[:show] if params[:show] %>
-
   <%= render 'organization_errors', f:f if current_user.admin? %>
   <%= render 'reference', f:f if current_user.admin? %>
   <%= render 'data', f:f if current_user.admin? %>
@@ -12,22 +11,10 @@
   <%= render 'interests', f:f if current_user.admin? || show_partial?('interests') %>
   <%= render 'agents', f:f if current_user.admin? || show_partial?('agents') %>
   <%= render 'terms', f:f if current_user.admin? %>
+  <%= render 'invalidate', f:f if current_user.admin? %>
 
-  <div class="row">
-    <div class="small-4 medium-6 large-8 column">
-      &nbsp
-    </div>
-    <div class="small-4 medium-3 large-2 column">
-      <% if @organization.id && current_user.admin? %>
-        <% if @organization.invalidate %>
-          <%= link_to t('backend.validate'), admin_organization_path(@organization, organization: {invalidate: false}), method: :put, :class=> "button radius success right" %>
-        <% else %>
-          <%= link_to t('backend.invalidate'), admin_organization_path(@organization, organization: {invalidate: true}), method: :put, :class=> "button radius alert right" %>
-        <% end %>
-      <% end %>
-    </div>
-    <div class="small-4 medium-3 large-2 column">
-      <%= submit_tag t('backend.save'), :class=> "button radius success right" %>
-    </div>
+  <div class="small-4 medium-3 large-2 column">
+    <%= submit_tag t('backend.save'), :class=> "button radius success right" %>
   </div>
+
 <% end %>
