--- a/app/views/admin/organizations/index.html.erb
+++ b/app/views/admin/organizations/index.html.erb
@@ -15,13 +15,14 @@
 
 <%= render 'admin_search_form' %>
 
+<%= page_entries_info @organizations.hits, entry_name: t('backend.lobby') %>
 <%= paginate @organizations.hits %>
 
 <div class="small-12">
   <table class="small-12">
     <thead>
       <tr>
-        <th><%= t('backend.title')%></th>
+        <th><%= t('backend.lobby')%></th>
         <th class="right"><%= t('backend.actions')%></th>
       </tr>
     </thead>
@@ -35,12 +36,12 @@
       <% @paginated_organizations.each do |organization| %>
       <tr id="<%= dom_id(organization) %>" >
         <td>
-          <%= organization.fullname %>
+          <%= link_to organization.fullname, organization_path(organization) %>
         </td>
         <td class="right">
           <%= link_to organization_path(organization),
                       target: :_blank,
-                      title: t('organizations.show.title') do %>
+                      title: t('backend.lobby_show') do %>
             <i class="step fi-eye size-24"></i>
           <% end %>
 
