--- a/app/views/admin/organizations/_data.html.erb
+++ b/app/views/admin/organizations/_data.html.erb
@@ -23,7 +23,7 @@
     </div>
     <div class="small-12 medium-6 columns">
       <%= f.label :phones, t('backend.identifying_data.phones') %>
-      <%= f.text_field :phones %>
+      <%= f.text_field :phones, placeholder: t('backend.placeholder.phones') %>
       <%= form_field_errors(f, :phones) %>
     </div>
     <div class="small-12 medium-6 columns">
