User lobby can not destroy agents

--- a/app/views/admin/organizations/_agents_fields.html.erb
+++ b/app/views/admin/organizations/_agents_fields.html.erb
@@ -42,11 +42,12 @@
     <%= f.text_area :public_assignments, class: 'mceNoEditor' %>
     <%= form_field_errors(f, :public_assignments) %>
   </div>
-
-  <div class="small-12 columns">
-    <br />
-    <%= link_to_remove_association "Eliminar", f, class: "button tiny radius alert right" %>
-    <hr />
-  </div>
+  <% if current_user.admin? %>
+    <div class="small-12 columns">
+      <br />
+      <%= link_to_remove_association "Eliminar", f, class: "button tiny radius alert right" %>
+      <hr />
+    </div>
+  <% end %>
 
 </div>
