--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
           <%= link_to "https://transparencia.madrid.es" do %>
             <%= image_tag 'header_logo_madrid.png', class: 'header__imago', alt:'¡Madrid'%>
           <% end %>
-          <h1 class="header__title"><strong><%= t('header.open_goverment') %></strong><%= link_to t('header.transparency'), "https://transparencia.madrid.es" %></h1>
+          <h1 class="header__title"><strong><%= link_to t('header.transparency'), "https://transparencia.madrid.es" %></strong><%= t('header.open_goverment') %></h1>
         </div>
         <section class="top-bar-section">
           <ul class="right">
@@ -73,7 +73,7 @@
       <%= link_to "https://transparencia.madrid.es" do %>
         <%= image_tag 'header_logo_madrid.png', class: 'header__imago', alt:'¡Madrid'%>
       <% end %>
-      <h1 class="header__title"><strong> <%= t('header.open_goverment') %> <br /> <%= link_to t('header.transparency'), "https://transparencia.madrid.es" %> </strong></h1>
+      <h1 class="header__title"><strong> <%= link_to t('header.transparency'), "https://transparencia.madrid.es" %><br /> <%= t('header.open_goverment') %> </strong></h1>
     </div>
 
     <div class="toggle-topbar menu-icon"><a href="#"><span></span></a></div>
