New redirect to lobbis registered

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -22,7 +22,7 @@
         <%= image_tag 'homepage/lobby-register.jpg', alt: t('home.register_lobby_title') %>
       <% end %>
       <div class="content">
-        <%= link_to organizations_path do %>
+        <%= link_to registration_lobbies_index_path do %>
           <p><strong><%= t'home.register_lobby_title' %> </strong></p>
         <% end %>
         <p>
