--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -7356,7 +7356,7 @@ select {
   background: #003df6;
   padding: 0;
 }
-.sub_top_bar_box{
+.sub_top_bar_box, .top-bar-section{
   background: #0000e1;
   ul{
     margin-bottom:0;
