--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -54,13 +54,13 @@
       <div class="small-12 medium-8 columns">
         <ul class="inline-list right">
           <li>
-            <%= link_to t('footer.btn_accessibility'), 'Esperando texto'  %>
+            <%= link_to t('footer.btn_accessibility'), 'http://datos.madrid.es/portal/site/egob/menuitem.400a817358ce98c34e937436a8a409a0/?vgnextoid=78e7f68e16891410VgnVCM100000171f5a0aRCRD&amp;vgnextchannel=78e7f68e16891410VgnVCM100000171f5a0aRCRD&amp;vgnextfmt=default'  %>
           </li>
           <li>
             <%= link_to t('footer.btn_contact'), 'http://www.madrid.es/portales/munimadrid/es/Inicio/El-Ayuntamiento/Contactar?vgnextfmt=default&vgnextchannel=2ff5891b0ed86210VgnVCM2000000c205a0aRCRD', target: 'blank'  %>
           </li>
           <li>
-            <%= link_to t('footer.btn_web_map'), 'Crear sitemap con link clikable'  %>
+            <%= link_to t('footer.btn_web_map'), nil  %>
           </li>
           <li>
             <%= link_to t('footer.btn_legal_warning'), 'https://transparencia.madrid.es/portales/transparencia/es/Aviso-legal?vgnextfmt=default&vgnextchannel=20d8508929a56510VgnVCM1000008a4a900aRCRD', target: 'blank'  %>
