--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,7 +20,7 @@
           <h1 class="header__title"><strong><%= link_to t('header.transparency'), "https://transparencia.madrid.es" %></strong><%= t('header.open_goverment') %></h1>
         </div>
         <section class="top-bar-section">
-          <ul class="right">
+          <ul class="right inline-list">
             <% if user_signed_in? %>
               <li>
                 <%= link_to destroy_user_session_path, method: :delete do %>
@@ -28,9 +28,7 @@
                 <% end %>
               </li>
               <li>
-                <%= link_to '/admin' do %>
-                  <%= t("backend.btn_admin")%>
-                <% end %>
+                <%= link_to t("backend.btn_admin"), admin_path, class: admin_current_class %>
               </li>
             <% else %>
               <li>
