Add accessibility page

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -54,7 +54,7 @@
       <div class="small-12 medium-8 columns">
         <ul class="inline-list right">
           <li>
-            <%= link_to t('footer.btn_accessibility'), 'http://datos.madrid.es/portal/site/egob/menuitem.400a817358ce98c34e937436a8a409a0/?vgnextoid=78e7f68e16891410VgnVCM100000171f5a0aRCRD&amp;vgnextchannel=78e7f68e16891410VgnVCM100000171f5a0aRCRD&amp;vgnextfmt=default'  %>
+            <%= link_to t('footer.btn_accessibility'), accessibility_path  %>
           </li>
           <li>
             <%= link_to t('footer.btn_contact'), 'http://www.madrid.es/portales/munimadrid/es/Inicio/El-Ayuntamiento/Contactar?vgnextfmt=default&vgnextchannel=2ff5891b0ed86210VgnVCM2000000c205a0aRCRD', target: 'blank'  %>
